# tact-file-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: requester.py
src/sakai_utils/: sakai.py
src/tact_file_downloader/: content_downloader.py  directory_selector.py  main.py  paginated_list.py  requester.py  sakai.py  sakai_content.py  sakai_site.py
