[project]
name = "tactfiledownloader"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tanashou", email = "tanashou0210@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "selenium>=4.19.0",
    "webdriver-manager>=4.0.2",
    "mypy>=1.9.0",
    "types-requests>=2.31.0.20240406",
    "pytest>=8.1.1",
    "pyotp>=2.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
main = "python src/tact_file_downloader/main.py"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tactfiledownloader"]
